SERVER-76801 Make MovePrimaryDonor::onBeganBlockingWrites() Idempotent

(cherry picked from commit aed68b23fdcf10abdf242e4351c140705026f626)